syntax = "proto2";
package panda;
option go_package = "github.com/katzenpost/panda";

// These protobufs are used for serialising a pending key exchange.

message KeyExchange {
	enum Status {
		INIT = 0;
		EXCHANGE1 = 1;
		EXCHANGE2 = 2;
	}
	required Status status = 1;
	required bytes key_exchange_bytes = 2;
	optional bytes shared_secret = 3;
	optional bytes dh_private = 4;
	optional bytes key = 5;
	optional bytes meeting1 = 6;
	optional bytes meeting2 = 7;
	optional bytes message1 = 8;
	optional bytes message2 = 9;
	optional bytes shared_key = 10;
	optional bytes shared_random = 11;
}
